--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ Total 3 (delta 1), reused 0 (delta 0)
 remote: Resolving deltas: 100% (1/1), completed with 1 local object.
 To https://github.com/hbgwebmaster/test.git
    6f9afe2..679b159  master -> master
-intelli:testgit intelli$ 
+intelli:testgit intelli$ ls
+
 
 
 
