--- a/index.html
+++ b/index.html
@@ -1,40 +1,1 @@
-cd /Volumes/Sierra/Users/intelli/Documents/testgit
-Last login: Tue Jan 29 11:10:35 on ttys000
-intelli:~ intelli$ cd /Volumes/Sierra/Users/intelli/Documents/testgit
-intelli:testgit intelli$ git config --global user.name "hbgwebmaster"
-intelli:testgit intelli$ git config --global user.email "hoabinhteamwebmaster@gmail.com"
-intelli:testgit intelli$ git remote add origin https://github.com/hbgwebmaster/test.git
-intelli:testgit intelli$ git push -f origin master
-Username for 'https://github.com': hbgwebmaster
-Password for 'https://hbgwebmaster@github.com': 
-Counting objects: 12, done.
-Delta compression using up to 2 threads.
-Compressing objects: 100% (7/7), done.
-Writing objects: 100% (12/12), 948 bytes | 237.00 KiB/s, done.
-Total 12 (delta 2), reused 0 (delta 0)
-remote: Resolving deltas: 100% (2/2), done.
-To https://github.com/hbgwebmaster/test.git
- + eb73c75...6f9afe2 master -> master (forced update)
-intelli:testgit intelli$ git push -f origin master
-Counting objects: 3, done.
-Delta compression using up to 2 threads.
-Compressing objects: 100% (3/3), done.
-Writing objects: 100% (3/3), 322 bytes | 322.00 KiB/s, done.
-Total 3 (delta 1), reused 0 (delta 0)
-remote: Resolving deltas: 100% (1/1), completed with 1 local object.
-To https://github.com/hbgwebmaster/test.git
-   6f9afe2..679b159  master -> master
-intelli:testgit intelli$ ls
-
-
-
-
-
-
-
-
-
-
-
-
-
+hihi
